Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44337

[REG 5.3-5.4] Android: QFileDialog for Save Keeps Save Button Disabled until the filename contains a dot

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.1
    • 5.4.0, 5.5.0
    • QPA
    • None
    • Officially released 5.4.0 downloaded as a pre-built package for linux-32 together with QtCreator.

      Nexus-7-2013 with Android-4.4.4.

      The example was built as a debug and as a release
      build versus SDKs 19, 20 or 21.
    • Android

    Description

      To reproduce:

      1. Build textedit example against 5.4.0;
      2. Run the example on a device;
      3. Write/chage some text in the QTextEdit window;
      4. Tap on button Save;
      5. Observe that appears QFileDialog;
      6. Select a writable folder;
      7. Try to write some file name using letters only:
      i.e.: myfile
      8. Observe that the Save button is still disabled
      9. After the filename, place some non-alphanumeric character:
      perion, comma, space etc. and observe that Save button comes
      to be enabled and now you can save your file

      10. Build the example versus 5.4.0 for Linux and run it
      on linux.
      Proceed with the steps 3 to 7 and observe
      that the issue is not existing and you can save your file
      as "myfile" without any need to place additional
      non-alphanumeric character.

      Therefore, I beleive that the issue is Android-specific.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            taipan BogDan Vatra
            coroberti Robert Iakobashvili
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes