Android: Don't use predictive text when selecting file names

Using predictive text will not refresh the selected files until a 
word is completed or the keyboard is hidden.

Task-number: QTBUG-44337
Change-Id: I9e9f1e760fe5d5a69abd6e112af55b217ae6a16d
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>